# Biocoin

./: .gitignore  README.md
.github/workflows/: firmware-sanity.yml
PCB/Biocoin/assembly/: BOM_Final_Biocoin_v1.3_AVDD=3.0V.xlsx  BOM_Final_Biocoin_v1.3_AVDD=3.6V.xlsx  Pick_and_Place_Assembly_Biocoin_v1.3.txt
PCB/Biocoin/design/: AFE.Harness  AFE.SchDoc  Biocoin_v1.3.PcbDoc  Biocoin_v1.3.PrjPcb  Current_Source.SchDoc  Job1.OutJob  MCU_BLE_Module.Harness  MCU_BLE_Module.SchDoc  Power Management.SchDoc
PCB/Biocoin/gerber/: Biocoin_v1.3.DRR  Biocoin_v1.3.EXTREP  (+26 more)
PCB/Shared Libraries/: Modules.PcbLib  Modules.SchLib  Schlib.SchLib
firmware/: .clang-format  Firmware.code-workspace  README.md  REVISION_HISTORY.md  platformio.ini
firmware/SDK Modifications/: WInterrupts-port.c  WInterrupts-port.h  variant.cpp  variant.h
firmware/docs/: BLE_PROTOCOL.md  BUILD_FLASH.md  CONTRIBUTING.md  POWER.md  README.md  RELEASE_CHECKLIST.md
firmware/scripts/: check_project_warnings.sh  sanity_checks.sh  smoke_sensor_modes.sh
firmware/src/: main.cpp
firmware/test/: README.md
fixtures/design/: Holder - rev 6.SLDPRT  Holder Top - rev 3.SLDPRT
fixtures/fabrication/: Holder - rev 6.STL  Holder - rev 6.form
software/: README.md  pyproject.toml
software/src/: main.py
software/src/biocoin/: __init__.py  device.py
software/src/biocoin/techniques/: CA.py  CV.py  DPV.py  Impedance.py  Iontophoresis.py  OCP.py  SWV.py  __init__.py  base_technique.py  temp.py
software/src/biocoin/utils/: ble_util.py
software/src/utils/: logging_util.py
software/tests/: CV_Waveform.py
(+128 files in other folders)
